# NYZRating

./: .dockerignore  .env.production.example  .gitignore  .gitleaks.toml  DEPLOYMENT_PROFILES.md  GO_LIVE_CHECKLIST_P0.md  Makefile  OBSERVABILITY_ALERTS_P0.md  START.md  TODO.txt  docker-compose.debug.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  package-lock.json  package.json
backend/: main.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/admin/: README.md  __init__.py  admin.py
backend/admin/domain/: __init__.py  admin_models.py  event_catalog.py
backend/admin/repository/: __init__.py  platform_admin_repository.py  schema_migrations.py
backend/admin/router/: __init__.py  admin_router.py
backend/admin/service/: __init__.py  platform_admin_service.py
backend/admin/web/: __init__.py
backend/apps/: __init__.py  registry.py  state_keys.py
backend/apps/billing/: README.md  __init__.py  api_routes.py  calculations.py  catalog.py  constants.py  debug_clock.py  debug_routes.py  domain.py  invoice_pdf.py  models.py  module.py  payment.py  repositories.py  router.py  runtime.py  schema_hooks.py  schemas.py  service.py  subscription_proration.py  worker.py  workflows.py
backend/apps/chat/: README.md  __init__.py  channel_access.py  channel_models.py  channel_policy.py  channel_quota.py  contracts.py  errors.py  infrastructure.py  module.py
backend/apps/demo/: module.py
backend/apps/install/: __init__.py  module.py
backend/apps/kb/: README.md  __init__.py  events.py  module.py  (+1 more)
backend/core/: __init__.py  testability.py
backend/infra/: __init__.py
backend/lang/: README.md  __init__.py  email_templates.py  messages.py
backend/scaffolding/: README.md  module.py  router.py  service.py
backend/scripts/: create_app_module.py  init_db.py  migrate_platform_security_alerts_legacy.py  preprod_smoke.sh  reassign_kb_data.py  rebuild_kb_index.py  reset_dev_database.py
backend/shared/: __init__.py
backend/tests/: README.md  app_factory.py  conftest.py  london_test.txt
(+1807 files in other folders)
