[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplaza"
version = "0.1.0"
description = "AIPLAZA alkalmazás"
readme = "../START.md"
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
test = [
    "pytest~=8.3.0",
    "pytest-asyncio",
    "pytest-cov",
    "httpx~=0.28.1",
    "fakeredis",
    "respx",
    "freezegun",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "core*", "infra*", "lang*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore:.*urllib3.*doesn't match.*:Warning:requests",
]
markers = [
    "architecture: AST-alapú architektúra és dependency boundary tesztek",
    "unit: gyors, külső függőség nélküli tesztek",
    "integration: API/DB vagy több komponens tesztek",
    "slow: lassú tesztek (pl. NER modellek)",
    "must_pass: valódi viselkedés teszt (sikeresen kell lefutnia)",
    "expected_fail_not_implemented: funkció még nincs implementálva (xfail)",
    "smoke_only: csak triviális ellenőrzés (pl. lista visszatérés)",
    "release_acceptance: minimum release acceptance suite – minden ilyen tesztnek át kell mennie a ship előtt",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "core", "shared", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# Fokozatos bevezetés: kezdetben nem blokkolunk csak sorhossz miatt.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = false
warn_unused_configs = true
pretty = true
show_error_codes = true
incremental = true
cache_dir = ".mypy_cache"
# Fokozatos bevezetés: először a kritikus security/error contract modulokon.
files = [
    "core/kernel/http/error_payloads.py",
]
